--- a/estiloasesores.css
+++ b/estiloasesores.css
@@ -1,5 +1,5 @@
 .portada{
-	background: url('portada1.jpg') #000;
+	background: url('./portada1.jpg') #000;
 	background-size: cover;
 	background-position: center;
 	background-attachment: scroll;
