--- a/ccs/estiloasesores.css
+++ b/ccs/estiloasesores.css
@@ -1,4 +1,5 @@
 .portada{
+	background: url('../img/portada1.jpg') #000;
 	background-size: cover;
 	background-position: center;
 	background-attachment: scroll;
@@ -6,13 +7,13 @@
    		font-family: 'Newsreader', serif;
 		word-spacing: 15px;
 		font-weight: 100px;
-		font-size: 1.5em;
+		font-size: 2em;
 		color: rgb(5, 4, 31);
 		line-height: 1.2em;
 		text-shadow: 2px 2px 2px rgb(115, 116, 156);
 		text-align: right;
-		padding-right: 50px;
-		padding-top: 50px;}
+		padding-top: 50px;
+		padding-right: 50px;}
 .boton button{
 	font-family: 'Newsreader', serif;
 	margin-top: 20px;
